--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -55,7 +55,8 @@ layout: default
         </details>
 
         <!-- Grid Layout: Content + Sidebar -->
-        <div class="lg:grid lg:grid-cols-[1fr_280px] lg:gap-8">
+       <div class="max-w-7xl mx-auto lg:grid lg:grid-cols-[1fr_280px] lg:gap-8 px-6">
+
             
             <!-- Left Spacer -->
             <div class="hidden lg:block"></div>
