added highlight text

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,8 +9,9 @@ roughjs: true
 
 <div role="main" class="flex flex-col">
     <section class="text-center max-w-4xl mx-auto mb-40" aria-labelledby="heading">
-        <h1 class="font-display text-4xl leading-none sm:text-3xl">Hi! I'm Rakshit Soral, <span class="highlight-yellow px-4 inline-block relative"> a reliable</span> Digital Marketer<span class="whitespace-nowrap"></span></h1>
-        <p class="text-lg mt-8 mx-auto max-w-3xl sm:text-lg">I believe marketing is all about conveying your <strong class="box-blue mx-1">message</strong> to consumers and convincing them to show <strong class="box-green mx-1">interest</strong>, and <strong class="box-red mx-1">invest</strong> in your product and services.</p>
+<h1 class="text-3xl md:text-4xl font-bold text-center mb-4" style="font-size: 3.8rem;">
+            Hi! I'm <span class="highlight-yellow px-4 inline-block relative sm:px-2">Rakshit Soral</span>, <span style="color: #EC4899;">a reliable Digital Marketer</span>
+        </h1>        <p class="text-lg mt-8 mx-auto max-w-3xl sm:text-lg">I believe marketing is all about conveying your <strong class="box-blue mx-1">message</strong> to consumers and convincing them to show <strong class="box-green mx-1">interest</strong>, and <strong class="box-red mx-1">invest</strong> in your product and services.</p>
     
     </section>
 
